@@ -3,8 +3,9 @@ Manifest.txt
 README.txt
 Rakefile
 bin/cf_claim_project
-bin/store_codefumes_credentials
+bin/cf_store_credentials
 lib/cf_claim_project/cli.rb
+lib/cf_store_credentials/cli.rb
 lib/codefumes.rb
 lib/codefumes/api.rb
 lib/codefumes/claim.rb
@@ -12,8 +13,8 @@ lib/codefumes/commit.rb
 lib/codefumes/config_file.rb
 lib/codefumes/payload.rb
 lib/codefumes/project.rb
-lib/store_codefumes_credentials/cli.rb
 spec/cf_claim_project/cli_spec.rb
+spec/cf_store_credentials/cli_spec.rb
 spec/codefumes/api_spec.rb
 spec/codefumes/claim_spec.rb
 spec/codefumes/commit_spec.rb
@@ -29,7 +30,6 @@ spec/fixtures/project.xml
 spec/fixtures/project_update.xml
 spec/spec.opts
 spec/spec_helper.rb
-spec/store_codefumes_credentials/cli_spec.rb
 tasks/rspec.rake
 website/index.html
 website/stylesheets/screen.css
