@@ -5,6 +5,6 @@
 
 require 'rubygems'
 require File.expand_path(File.dirname(__FILE__) + "/../lib/codefumes")
-require File.expand_path(File.dirname(__FILE__) + "/../lib/store_codefumes_credentials/cli")
+require File.expand_path(File.dirname(__FILE__) + "/../lib/cf_store_credentials/cli")
 
-StoreCodefumesCredentials::CLI.execute(STDOUT, ARGV)
+CfStoreCredentials::CLI.execute(STDOUT, ARGV)
